docs/css/styles.css
.navbar.logo {
  margin-top: 2.5rem;
}

.navbar-brand.logo {
  align-items: center;
}

.navbar-item.logo {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  padding: 0px;
}

.navbar-item.logo img {
  max-height: 80px;
  padding-right: 10px;
  padding-left: 10px;
}

.publication-title {
  font-family: 'Nunito';
  font-weight: 600;
}

.publication-authors {
  font-family: 'Nunito';
  font-weight: 500;
}

.publication-institute {
  font-family: 'Nunito';
  font-weight: 400;
}

.author-list {
  margin-top: 10px;
  margin-bottom: 10px;
}

.content{
  font-family: 'Nunito';
}

.lab-logo img{
  max-height: 60px;

}

.logo-list {
  display: flex;
  flex-wrap: nowrap;
  justify-content: center;
  align-items:top;
  color: #50549b;
  font-weight: 400;
  margin-top: 30px;
  margin-bottom: 10px;
}

.affiliation-num{
  font-size: 12px;
  margin-right: 40px;

}

.affiliation-num-right{
  font-size: 12px;
  
}

.tldr {
  font-family: 'Nunito';
  font-size: 20px;
  text-align: center;
}

.publication-video {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  overflow: hidden;
  border-radius: 10px !important;
}

.publication-video iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.publication-keywords {
  color: #14274e;
  font-family: 'Nunito';
}


.author-blocks {
  color: #50549b;
}

.author-blocks:hover {
  color: #9bb4c2;
}

.link-blocks {
  margin-top: 1rem;
}

.link-button {
  color: #f5f5f5;
  background-color: #143163;
  border-color: #143163;
  margin-left: 0.1rem;
  margin-right: 0.1rem;
  margin-bottom: 0.5rem;
  font-family: "Nunito";
}

.link-button:hover {
  color: #f5f5f5;
  background-color: #143163;
  border-color: #143163;
}

.bibtex-box {
  background-color: #f5f5f5;
  font-family: "Roboto Mono", monospace;
}


.results_video {
  width: 15rem;
  margin: auto;
}
.normal-text {
  font-family: 'Nunito';
}
.caption {
  margin-top: -1.5rem
}

.gifs{
  width: 20%;
  text-align: center;
  vertical-align: middle;
}

